--- a/projects.html
+++ b/projects.html
@@ -42,8 +42,8 @@
         <div class="container">
             <h1 class="page-title">Projects</h1>
             <div class="project-buttons">
-                <button class="project-btn" data-project="1">Project 1.</button>
-                <button class="project-btn" data-project="2">Project 2.</button>
+                <button class="project-btn" data-project="1">SAP Implementation</button>
+                <button class="project-btn" data-project="2">EFMD Accreditation</button>
             </div>
 
             <div class="project-details">
