--- a/projects.html
+++ b/projects.html
@@ -42,16 +42,16 @@
         <div class="container">
             <h1 class="page-title">Projects</h1>
             <div class="project-buttons">
-                <button class="project-btn" data-project="1">SAP Implementation</button>
-                <button class="project-btn" data-project="2">EFMD Accreditation</button>
+                <button class="project-btn" data-project="1">SAP-järjestelmän implementointi</button>
+                <button class="project-btn" data-project="2">EFMD akkreditointi</button>
             </div>
 
             <div class="project-details">
-                <div class="project-detail-box" id="project1-detail">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="project-detail-box" id="sap-implementointi-detail">
+                    <p>SAP-ohjelmiston syventävällä kurssilla sain mahdollisuuden toteuttaa itsenäisesti kohdeyritykselle toiminnanohjausjärjestelmän sekä testata sen toimivuutta osto-, laskutus- ja myyntiprosesseissa.</p>
                 </div>
-                <div class="project-detail-box" id="project2-detail">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="project-detail-box" id="efmd-akkreditointi-detail">
+                    <p>Osallistuin INTBBA-koulutusohjelman akkreditointiprojektiin tiiminvetäjänä vastaten oppilasraportin laatimisesta tutkinnon laadun arvioimiseksi sekä edustin opiskelijoita paneelissa, jossa kansainväliset arvioijat tarkastelivat tutkinnon soveltuvuutta ja kehityskohteita.</p>
                 </div>
             </div>
         </div>
