--- a/projects.html
+++ b/projects.html
@@ -42,8 +42,8 @@
         <div class="container">
             <h1 class="page-title">Projects</h1>
             <div class="project-buttons">
-                <button class="project-btn" data-project="1">SAP-järjestelmän implementointi</button>
-                <button class="project-btn" data-project="2">EFMD akkreditointi</button>
+                <button class="project-btn" data-project="sap-implementointi">SAP-järjestelmän implementointi</button>
+                <button class="project-btn" data-project="efmd-akkreditointi">EFMD akkreditointi</button>
             </div>
 
             <div class="project-details">
