--- a/projects.html
+++ b/projects.html
@@ -47,10 +47,10 @@
             </div>
 
             <div class="project-details">
-                <div class="project-detail-box" id="project1-detail">
+                <div class="project-detail-box" id="project1">
                     <p>SAP-ohjelmiston syventävällä kurssilla sain mahdollisuuden toteuttaa itsenäisesti kohdeyritykselle toiminnanohjausjärjestelmän sekä testata sen toimivuutta osto-, laskutus- ja myyntiprosesseissa.</p>
                 </div>
-                <div class="project-detail-box" id="project2-detail">
+                <div class="project-detail-box" id="project2">
                     <p>Osallistuin INTBBA-koulutusohjelman akkreditointiprojektiin tiiminvetäjänä vastaten oppilasraportin laatimisesta tutkinnon laadun arvioimiseksi sekä edustin opiskelijoita paneelissa, jossa kansainväliset arvioijat tarkastelivat tutkinnon soveltuvuutta ja kehityskohteita.</p>
                 </div>
             </div>
