--- a/projects.html
+++ b/projects.html
@@ -42,15 +42,15 @@
         <div class="container">
             <h1 class="page-title">Projects</h1>
             <div class="project-buttons">
-                <button class="project-btn" data-project="project1">SAP-järjestelmän implementointi</button>
-                <button class="project-btn" data-project="project2">EFMD akkreditointi</button>
+                <button class="project-btn" data-project="1">SAP-järjestelmän implementointi</button>
+                <button class="project-btn" data-project="2">EFMD akkreditointi</button>
             </div>
 
             <div class="project-details">
-                <div class="project-detail-box" id="project1">
+                <div class="project-detail-box" id="1-detail">
                     <p>SAP-ohjelmiston syventävällä kurssilla sain mahdollisuuden toteuttaa itsenäisesti kohdeyritykselle toiminnanohjausjärjestelmän sekä testata sen toimivuutta osto-, laskutus- ja myyntiprosesseissa.</p>
                 </div>
-                <div class="project-detail-box" id="project2">
+                <div class="project-detail-box" id="2-detail">
                     <p>Osallistuin INTBBA-koulutusohjelman akkreditointiprojektiin tiiminvetäjänä vastaten oppilasraportin laatimisesta tutkinnon laadun arvioimiseksi sekä edustin opiskelijoita paneelissa, jossa kansainväliset arvioijat tarkastelivat tutkinnon soveltuvuutta ja kehityskohteita.</p>
                 </div>
             </div>
