--- a/projects.html
+++ b/projects.html
@@ -38,25 +38,24 @@
         </div>
     </nav>
 
-    <section class="projects-section">
-    <div class="container">
-        <h1 class="page-title">Projects</h1>
+        <section class="projects-section">
+        <div class="container">
+            <h1 class="page-title">Projects</h1>
+            <div class="project-buttons">
+                <button class="project-btn" data-project="sap">SAP-järjestelmän implementointi</button>
+                <button class="project-btn" data-project="efmd">EFMD akkreditointi</button>
+            </div>
 
-        <!-- SAP-projekti -->
-        <input type="checkbox" id="sap-toggle" hidden>
-        <label class="project-btn" for="sap-toggle">SAP-järjestelmän implementointi</label>
-        <div class="project-detail-box">
-            <p>SAP-ohjelmiston syventävällä kurssilla sain mahdollisuuden toteuttaa itsenäisesti kohdeyritykselle toiminnanohjausjärjestelmän sekä testata sen toimivuutta osto-, laskutus- ja myyntiprosesseissa.</p>
+            <div class="project-details">
+                <div class="project-detail-box" id="sap-detail">
+                    <p>SAP-ohjelmiston syventävällä kurssilla sain mahdollisuuden toteuttaa itsenäisesti kohdeyritykselle toiminnanohjausjärjestelmän sekä testata sen toimivuutta osto-, laskutus- ja myyntiprosesseissa.</p>
+                </div>
+                <div class="project-detail-box" id="efmd-detail">
+                    <p>Osallistuin INTBBA-koulutusohjelman akkreditointiprojektiin tiiminvetäjänä vastaten oppilasraportin laatimisesta tutkinnon laadun arvioimiseksi sekä edustin opiskelijoita paneelissa, jossa kansainväliset arvioijat tarkastelivat tutkinnon soveltuvuutta ja kehityskohteita.</p>
+                </div>
+            </div>
         </div>
-
-        <!-- EFMD-projekti -->
-        <input type="checkbox" id="efmd-toggle" hidden>
-        <label class="project-btn" for="efmd-toggle">EFMD akkreditointi</label>
-        <div class="project-detail-box">
-            <p>Osallistuin INTBBA-koulutusohjelman akkreditointiprojektiin tiiminvetäjänä vastaten oppilasraportin laatimisesta tutkinnon laadun arvioimiseksi sekä edustin opiskelijoita paneelissa, jossa kansainväliset arvioijat tarkastelivat tutkinnon soveltuvuutta ja kehityskohteita.</p>
-        </div>
-    </div>
-</section>
+    </section>
 
     <footer class="footer">
         <div class="container">
