--- a/projects.html
+++ b/projects.html
@@ -42,16 +42,16 @@
         <div class="container">
             <h1 class="page-title">Projects</h1>
             <div class="project-buttons">
-                <button class="project-btn" data-project="sap">SAP-järjestelmän implementointi</button>
-                <button class="project-btn" data-project="efmd">EFMD akkreditointi</button>
+                <button class="project-btn" data-project="sap">SAP Implementation</button>
+                <button class="project-btn" data-project="efmd">EFMD Accreditation</button>
             </div>
 
             <div class="project-details">
                 <div class="project-detail-box" id="sap-detail">
-                    <p>SAP-ohjelmiston syventävällä kurssilla sain mahdollisuuden toteuttaa itsenäisesti kohdeyritykselle toiminnanohjausjärjestelmän sekä testata sen toimivuutta osto-, laskutus- ja myyntiprosesseissa.</p>
+                    <p>In the advanced SAP course, I had the opportunity to independently implement an enterprise resource planning system for the target company and test its functionality in the purchasing, invoicing, and sales processes.</p>
                 </div>
                 <div class="project-detail-box" id="efmd-detail">
-                    <p>Osallistuin INTBBA-koulutusohjelman akkreditointiprojektiin tiiminvetäjänä vastaten oppilasraportin laatimisesta tutkinnon laadun arvioimiseksi sekä edustin opiskelijoita paneelissa, jossa kansainväliset arvioijat tarkastelivat tutkinnon soveltuvuutta ja kehityskohteita.</p>
+                    <p>I participated in the accreditation project of the INTBBA degree program as a team leader, responsible for preparing a student report to assess the quality of the degree, and represented the students on a panel where international evaluators reviewed the program’s applicability and areas for improvement.</p>
                 </div>
             </div>
         </div>
