--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="src/images/profile.jpg" alt="Profile Picture" class="profile-img">
+                <img src="src/images/profile.jpg" alt="Profile Picture of Inka Matikainen" class="profile-img">
             </div>
         </div>
     </section>
