--- a/professional.html
+++ b/professional.html
@@ -50,7 +50,7 @@
             <div class="section">
                 <h2 class="section-heading">Qualifications</h2>
                 <div class="qualifications-item">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Final-year International Business student with hands-on experience in HR, sales, and team leadership. Skilled in relationship management, problem-solving, and data-driven decision-making, with a strong focus on creating engaging experiences for employees and customers. Fluent in Finnish and English (C1), adaptable, and results-driven, thriving in environments that emphasize continuous learning, professional growth, and process improvement.</p>
                 </div>
             </div>
             
