--- a/professional.html
+++ b/professional.html
@@ -50,7 +50,7 @@
             <div class="section">
                 <h2 class="section-heading">Qualifications</h2>
                 <div class="qualifications-item">
-                    <p>Final-year International Business student with hands-on experience in HR, sales, and team leadership. Skilled in relationship management, problem-solving, and data-driven decision-making, with a strong focus on creating engaging experiences for employees and customers. Fluent in Finnish and English (C1), adaptable, and results-driven, thriving in environments that emphasize continuous learning, professional growth, and process improvement.</p>
+                    <p>Final-year International Business student with hands-on experience in HR, sales, and team leadership. Skilled in relationship management, problem-solving, and data-driven decision-making, with a strong focus on creating engaging experiences for employees and customers. Fluent in Finnish and English (C1), adaptable, and results-driven, thriving in environments that emphasize continuous learning and process improvement.</p>
                 </div>
             </div>
             
@@ -87,7 +87,7 @@
             <div class="section">
                 <h2 class="section-heading">Skills</h2>
                 <div class="skills-item">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Proficient in Excel, SAP, Word, and WorkDay, with experience in data analysis, reporting, and visualization. Experienced in versatile HR processes across the employee lifecycle, complemented by supporting knowledge of sales operations and managing stakeholder satisfaction. Strong competencies in process improvement, administrative management, and contract law.</p>
                 </div>
             </div>
         </div>
