--- a/professional.html
+++ b/professional.html
@@ -59,26 +59,26 @@
                 <h2 class="section-heading">Experience</h2>
                 <div class="experience-item">
                     <div class="experience-content">
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <p>HR Trainee | Global Blue</p>
                     </div>
                     <div class="experience-year">
-                        <span>20xx</span>
+                        <span>October 2024 - April 2025</span>
                     </div>
                 </div>
                 <div class="experience-item">
                     <div class="experience-content">
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <p>Shift Leader, Shift Manager | La Torrefazione</p>
                     </div>
                     <div class="experience-year">
-                        <span>20xx</span>
+                        <span>January 2022 -</span>
                     </div>
                 </div>
                 <div class="experience-item">
                     <div class="experience-content">
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <p>Assistant Shift Manager, Trainer | McDonald´s</p>
                     </div>
                     <div class="experience-year">
-                        <span>20xx</span>
+                        <span>April 2019 - November 2021</span>
                     </div>
                 </div>
             </div>
