--- a/professional.html
+++ b/professional.html
@@ -50,7 +50,7 @@
             <div class="section">
                 <h2 class="section-heading">Qualifications</h2>
                 <div class="qualifications-item">
-                    <p>Final-year International Business student with hands-on experience in HR, sales, and team leadership. Skilled in relationship management, problem-solving, and data-driven decision-making, with a strong focus on creating engaging experiences for employees and customers. Fluent in Finnish and English (C1), adaptable, and results-driven, thriving in environments that emphasize continuous learning and process improvement.</p>
+                    <p>Final-year International Business student with hands-on experience in HR, sales, and taking initiative. Skilled in operational management, problem-solving, and data-driven decision-making. Committed to creating engaging experiences for employees and customers. Fluent in Finnish and English, adaptable, and results-driven, thriving in environments that value continuous learning and where I can make a tangible impact.</p>
                 </div>
             </div>
             
@@ -87,7 +87,7 @@
             <div class="section">
                 <h2 class="section-heading">Skills</h2>
                 <div class="skills-item">
-                    <p>Proficient in Excel, SAP, Word, and WorkDay, with experience in data analysis, reporting, and visualization. Experienced in versatile HR processes across the employee lifecycle, complemented by supporting knowledge of sales operations and managing stakeholder satisfaction. Strong competencies in process improvement, administrative management, and contract law.</p>
+                    <p>Skilled at leveraging Excel, SAP, Word, and WorkDay to analyze data, produce actionable reports, and create clear visualizations. Experienced in managing HR processes across the employee lifecycle while supporting sales operations and ensuring stakeholder satisfaction. Proven ability to drive process improvements, streamline administrative operations, and apply contract law to personnel-related matters.</p>
                 </div>
             </div>
         </div>
