--- a/professional.html
+++ b/professional.html
@@ -50,7 +50,7 @@
             <div class="section">
                 <h2 class="section-heading">Qualifications</h2>
                 <div class="qualifications-item">
-                    <p>Final-year International Business student with hands-on experience in HR, sales, and taking initiative. Skilled in operational management, problem-solving, and data-driven decision-making. Committed to creating engaging experiences for employees and customers. Fluent in Finnish and English, adaptable, and results-driven, thriving in environments that value continuous learning and where I can make a tangible impact.</p>
+                    <p>Final-year International Business student with hands-on experience in HR, sales, and taking initiative. Experienced in operational management, problem-solving, and data-driven decision-making. Committed to creating engaging experiences for employees and customers. Fluent in Finnish and English, adaptable, and results-driven, thriving in environments that value continuous learning and where I can make a tangible impact.</p>
                 </div>
             </div>
             
@@ -87,7 +87,7 @@
             <div class="section">
                 <h2 class="section-heading">Skills</h2>
                 <div class="skills-item">
-                    <p>Skilled at leveraging Excel, SAP, Word, and WorkDay to analyze data, produce actionable reports, and create clear visualizations. Experienced in managing HR processes across the employee lifecycle while supporting sales operations and ensuring stakeholder satisfaction. Proven ability to drive process improvements, streamline administrative operations, and apply contract law to personnel-related matters.</p>
+                    <p>Skilled at leveraging Excel, SAP, Word, and WorkDay to analyse data, produce actionable reports, and create clear visualisations. Knowledge in managing HR processes across the employee lifecycle while supporting sales operations and ensuring stakeholder satisfaction. Proven ability to drive process improvements, streamline administrative operations, and apply contract law to personnel-related matters.</p>
                 </div>
             </div>
         </div>
