--- a/index.html
+++ b/index.html
@@ -13,51 +13,56 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="home-page">
-    <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-logo">
-                <a href="index.html">Inka Matikainen</a>
-            </div>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link active">HOME</a>
-                </li>
-                <li class="nav-item">
-                    <a href="professional.html" class="nav-link">PROFESSIONAL BACKGROUND</a>
-                </li>
-                <li class="nav-item">
-                    <a href="projects.html" class="nav-link">PROJECTS</a>
-                </li>
-            </ul>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-        </div>
-    </nav>
 
-    <section class="hero">
-        <div class="hero-container">
-            <div class="hero-content">
-                <h1 class="hero-title">Hi! I'm Inka</h1>
-                <div class="intro-text-box">
-                    <p>With a strong collaborative mindset and a keen interest in supporting business operations behind the scenes, I'm ready to drive operational excellence in dynamic organizations.</p>
+<body class="home-page">
+    <header>
+        <nav class="navbar" aria-label="Main navigation">
+            <div class="nav-container">
+                <div class="nav-logo">
+                    <a href="index.html">Inka Matikainen</a>
                 </div>
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link active">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="professional.html" class="nav-link">PROFESSIONAL BACKGROUND</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="projects.html" class="nav-link">PROJECTS</a>
+                    </li>
+                </ul>
+                <button class="hamburger" aria-label="Toggle navigation menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </button>
             </div>
-            <div class="hero-image">
-                <img src="src/images/profile.jpg" alt="Profile Picture of Inka Matikainen" class="profile-img">
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="hero-container">
+                <div class="hero-content">
+                    <h1 class="hero-title">Hi! I'm Inka</h1>
+                    <div class="intro-text-box">
+                        <p>With a strong collaborative mindset and a keen interest in supporting business operations behind the scenes, I'm ready to drive operational excellence in dynamic organizations.</p>
+                    </div>
+                </div>
+                <figure class="hero-image">
+                    <img src="src/images/profile.jpg" alt="Profile picture of Inka Matikainen" class="profile-img">
+                </figure>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <footer class="footer">
         <div class="container">
-            <div class="contact-info">
-                <span class="phone">+ 358 50 4442520</span>
-                <span class="email">inka.matikainen@outlook.com</span>
-            </div>
+            <address class="contact-info">
+                <span class="phone"><a href="tel:+358504442520">+358 50 4442520</a></span>
+                <span class="email"><a href="mailto:inka.matikainen@outlook.com">inka.matikainen@outlook.com</a></span>
+            </address>
         </div>
     </footer>
 
