change format for tel and mail

--- a/professional.html
+++ b/professional.html
@@ -100,12 +100,12 @@
     <footer class="footer">
         <div class="container">
             <address class="contact-info">
-                <span class="phone"><a href="tel:+358504442520">+358 50 4442520</a></span>
-                <span class="email"><a href="mailto:inka.matikainen@outlook.com">inka.matikainen@outlook.com</a></span>
+                <span class="phone"><a href="+358504442520">+358 50 4442520</a></span>
+                <span class="email"><a href="inka.matikainen@outlook.com">inka.matikainen@outlook.com</a></span>
             </address>
         </div>
     </footer>
-    
+
     <script src="src/js/main.js"></script>
 </body>
 </html>
